--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-streamlit
-fpdf
-pytesseract
-pdfplumber
-PyPDF2
-python-docx
 bcrypt
-requests
+python-docx
+fpdf
+google-generativeai
+PyPDF2
+streamlit
 pandas
 plotly
-Pillow
-google-generativeai
-openai
-torch
 mistralai
-streamlit-javascript
+requests
+pytesseract
 pdf2image
+openai
+Pillow
+pdfplumber
+torch
 torchvision
+transformers
